testcases/8-sni-rbac/envoyfilter8-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
  labels:
  name: envoyfilter8-app
  namespace: httpbin
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.rbac
        portNumber: 8000
      proxy:
        proxyVersion: ^1\.(9|12|15|17|19|20|21)(\.\d+)?(-.*)?$
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.network.rbac
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
          rules:
            policies:
              httpbin-traffic-policy:
                permissions:
                - and_rules:
                    rules:
                    - or_rules:
                        rules:
                        - requested_server_name:
                            exact: httpbin.aegle.info
                    - or_rules:
                        rules:
                        - destination_port: 8443
                principals:
                  - source_ip:
                      address_prefix: "10.244.0.0"
                      prefix_len: 24
          stat_prefix: httpbin-rbac.
  priority: -10
  workloadSelector:
    labels:
      app: httpbin
      version: v1
